# core

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/fibrin_health_backend/: Cargo.toml
src/fibrin_health_backend/src/: erh_indexer.rs  lib.rs
src/fibrin_health_frontend/: package.json
src/fibrin_health_frontend/src/: App.jsx
src/middleware/: Cargo.toml
src/middleware/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/middleware/src/ctx/: ctx.rs
src/middleware/src/log/: mod.rs
src/middleware/src/model/: model.rs
src/middleware/src/web/: error.rs  mod.rs  mw_auth.rs  routes_ehr.rs  routes_login.rs  routes_tickets.rs
src/middleware/tests/: quick_dev.rs
